[package]
name = "noise"
version = "0.1.0"
authors = ["John Newby <john@newby.org>"]
edition = "2018"

[dependencies]
arrayref = "0.3.5"
base58check = "0.0.1"
byteorder = "*"
hex = "0.3.2"
noise-protocol = "0.0.5"
noise-rust-crypto = "0.0.5"
lazy_static = "1.2.0"
regex = "*"
rlp = "0.3.0"
snow = "0.4.0"
serde-rlp = "0.1.2"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_bytes = "0.10"